fix isBlank() java version problem